Support GnosisSafeProxy
